--- a/style.css
+++ b/style.css
@@ -1,5 +1,42 @@
-body{
-    height:15rem;  
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+body{     /*setting body of extension*/
+    height:15rem;
     width:20rem;
-    background-color: antiquewhite;
+    margin: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    background: linear-gradient(to bottom, #4b4b4b, #1b1b1b); /* Dark grey to black gradient from top to bottom */
+    
+
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    align-items: center;
+    
+    
+}
+h1 {
+    color: #fffff0; /* Ivory */
+    font-size: 1.5rem;
+
+}
+.passbox{
+    background-color: white;
+    border: none;
+    outline:none;
+    padding: 5px;
+    border-radius: 5px;
+    width:19rem;
+    height: 2rem;
+    font-size: 1rem;
+    font-weight: 700;
+    margin-block: 0.5rem;
 }
