--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
 }
 body{     /*setting body of extension*/
-    height:15rem;
-    width:20rem;
+    height:20rem;
+    width:22rem;
     margin: 2rem;
     display: flex;
     align-items: center;
@@ -39,4 +39,39 @@ h1 {
     font-size: 1rem;
     font-weight: 700;
     margin-block: 0.5rem;
+}
+
+.custom-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%; /* Full width */
+    height: 8px; /* Height of the slider track */
+    background: linear-gradient(to right, #f9ca24, #e84118); /* Gradient background color */
+    border-radius: 5px; /* Rounded corners */
+    outline: none; /* Remove default focus outline */
+    opacity: 0.7; /* Initial opacity */
+    transition: opacity 0.4s; /* Transition for hover effect */
+}
+
+/* Styling the thumb (handle) for WebKit(chrome safari) browsers */
+.custom-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px; /* Width of the thumb */
+    height: 20px; /* Height of the thumb */
+    background-color: #fff; /* Color of the thumb */
+    border-radius: 50%; /* Rounded shape */
+    cursor: pointer; /* Cursor style */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Shadow for the thumb */
+}
+.custom-slider:hover {
+    opacity: 1; /* Full opacity on hover */
+}
+.row{
+    font-size:1rem;
+    color: #fffff0; /* Ivory */
+    display: flex;
+    
+    width:100%;
+    justify-content: space-between;
 }
