--- a/style.css
+++ b/style.css
@@ -106,3 +106,14 @@ h1 {
     border-color: #ffa500; /* Orange border on click */
     color: #ffffff; /* White text on click */
 }
+
+.inputbox{
+    position: relative;
+}
+.inputbox span{
+    position:absolute;
+    top:11px;
+    right:5px;
+    padding: 1px;
+    cursor: pointer;
+}
